--- a/styles/style.css
+++ b/styles/style.css
@@ -73,9 +73,9 @@ navbar{
 }
 .galleryItems{
     display:  inline-flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: 2.4rem;
     font-family: 'Roboto', sans-serif;
 }
 .galleryItems div{
